--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,11 @@ rust-version = "1.65"
 description = "Shared mutability containers based on hazard pointers"
 repository = "https://github.com/skogseth/hzrd/"
 license = "MIT"
+
+[[bin]]
+name = "back-and-forth"
+path = "benchmarks/back-and-forth.rs"
+
+[[bin]]
+name = "local-writer"
+path = "benchmarks/local-writer.rs"
