--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,15 @@ description = "Shared mutability containers based on hazard pointers"
 repository = "https://github.com/skogseth/hzrd/"
 license = "MIT"
 
+[target.'cfg(loom)'.dependencies]
+loom = { version = "0.7.2", features = ["checkpoint"] }
+
+[profile.loom]
+inherits = "release"
+debug = true
+overflow-checks = true
+debug-assertions = true
+
 [dev-dependencies]
 criterion = "0.5.1"
 
